replaced new Locale with Locale.of(