@@ -57,7 +57,7 @@ public class TextInputChannelTest {
     final TextInputChannel.Configuration configuration =
         TextInputChannel.Configuration.fromJson(arguments);
 
-    final Locale[] hintLocales = {new Locale("en"), new Locale("fr")};
+    final Locale[] hintLocales = {Locale.of("en"), Locale.of("fr")};
     assertEquals(configuration.hintLocales.length, hintLocales.length);
     assertEquals(configuration.hintLocales[0], hintLocales[0]);
     assertEquals(configuration.hintLocales[1], hintLocales[1]);
